--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="nom">Solène Avril<span class="vert">.</span></h1>
+        <h1 class="signature">SOLÈNE AVRIL<span class="vert">.</span></h1>
         <div class="icones">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
