--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="styles.css" </head>
 
 <body>
-    <header>
-        <h1 class="signature">SOLÈNE AVRIL<span class="vert">.</span></h1>
+    <header class="signature">
+        <h1>SOLÈNE AVRIL<span class="vert">.</span></h1>
         <div class="icones">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
