--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fil_Rouge</title>
-    <script src="https://kit.fontawesome.com/d8b5b7d5f2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d8b5b7d5f2.jss" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" </head>
 
 <body>
@@ -61,6 +61,5 @@
         <h3>HTML - CSS</h3>
     </footer>
 </body>
-
 
 </html>
