--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fil_Rouge</title>
-    <script src="https://kit.fontawesome.com/d8b5b7d5f2.jss" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d8b5b7d5f2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" </head>
 
 <body>
